--- a/app/views/patrimonio/baul/indexRemitoBaul.scala.html
+++ b/app/views/patrimonio/baul/indexRemitoBaul.scala.html
@@ -154,7 +154,7 @@
 	</table>
 
 	<div class="pagination pull-right">
-	    @views.html.helpers.paginador(buscador, controllers.patrimonio.routes.RemitosController.index())
+	    @views.html.helpers.paginador(buscador, controllers.patrimonio.routes.RemitosBaulController.index())
 	</div>
   }
 }
