--- a/app/views/dashboard/informeEstadisticoPagoProveedores/autorizadosPorFechaProveedor.scala.html
+++ b/app/views/dashboard/informeEstadisticoPagoProveedores/autorizadosPorFechaProveedor.scala.html
@@ -91,6 +91,13 @@
 			</tfoot>
 		</table>
 
+<script type="text/javascript">
+	$( function() {
+		$('#searchProveedor').modalSearch();
+
+
+	});
+	</script>
 
 
 }
