--- a/app/views/haberes/liquidacionConceptos/verLiquidacionConcepto.scala.html
+++ b/app/views/haberes/liquidacionConceptos/verLiquidacionConcepto.scala.html
@@ -1,9 +1,9 @@
 @(lcForm:Form[models.haberes.LiquidacionConcepto],lc:models.haberes.LiquidacionConcepto)
-@import helper._ 
-@import utils._ 
+@import helper._
+@import utils._
 @scripts = {
 <script src="@routes.Assets.at("javascripts/haberes/liquidacionConcepto.js")" type="text/javascript"></script>
-} 
+}
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.haberes.mainHaberes("Vista Concepto",scripts) {
@@ -18,9 +18,9 @@
 <div class="row menu-acciones">
 	<div class="col-sm-10">
 		<a href="@controllers.haberes.routes.LiquidacionConceptosController.crear()" class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i>
-			Nuevo Concepto</a> 
+			Nuevo Concepto</a>
 			<a href="@controllers.haberes.routes.LiquidacionConceptosController.editar(lc.id)@UriTrack.get("&")"  class="btn btn-default"><i class="glyphicon glyphicon-edit"></i>
-			Editar</a> 
+			Editar</a>
 			<a href="@controllers.haberes.routes.LiquidacionConceptosController.eliminar(lc.id)@UriTrack.get("&")"  class="btn btn-default delete-confirm-link"><i
 			class="glyphicon glyphicon-trash icono-eliminar"></i> Eliminar</a>
 	</div>
@@ -89,12 +89,26 @@
 			</div>
 		</div>
 	<div class="col-sm-2">
-			<div class="form-group">
-				<label class="control-label">Reporte ganancias</label>
-				<p class="form-control-static form-control">
-					@if(lcForm("reporte_ganancias").value == "true"){SI}else{NO}
-				</p>
-			</div>
-		</div>	
+		<div class="form-group">
+			<label class="control-label">Reporte ganancias</label>
+			<p class="form-control-static form-control">
+				@if(lcForm("reporte_ganancias").value == "true"){SI}else{NO}
+			</p>
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<div class="form-group">
+			<label class="control-label">Dispo</label>
+			<p class="form-control-static form-control">@lcForm.field("dispo").value</p>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-12">
+		<div class="form-group">
+			<label class="control-label">Descripcion</label>
+			<p class="form-control-static form-control">@lcForm.field("descripcion").value</p>
+		</div>
+	</div>
 </div>
 }
