--- a/app/views/rrhh/agenteAsistenciaLicencia/listadoLicenciasEnFecha.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/listadoLicenciasEnFecha.scala.html
@@ -4,7 +4,7 @@
 @import models._
 @getClassEstado(i:Integer) = @{
 	var classEstado:String = new String()
-	
+
 	if(i  != null && (i == 93) ){
 		classEstado = "borrador"
 	}else if(i != null && i == 95){
@@ -14,13 +14,13 @@
 	}else if(i != null && i == 96){
 		classEstado = "licenciaPreaprobado"
 	}
-	
+
 	classEstado
 }
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/rrhh/agentes.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.math.BigDecimal;var dx =new java.math.BigDecimal(15);
 @views.html.rrhh.mainRrhh("Lista Agentes Asistencias",scripts) {
 	<div class="page-header">
@@ -32,18 +32,18 @@
 			</div>
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
-	
+
 	<div id="actions">
 		<form action="" id="formSearchAgenteAsistencia" method="GET">
-			 
+
 			<div class="row" >
 				<div class="col-sm-2">
 					<div class="form-group">
 						<label for="cuit" class="control-label">Estado
-						@select(formBuscador("estado_id"), 
-						Estado.find.where.eq("tipo",20).findList().map { p => p.id.toString -> p.nombre}, 
+						@select(formBuscador("estado_id"),
+						Estado.find.where.eq("tipo",20).findList().map { p => p.id.toString -> p.nombre},
 						'class -> "form-control select", '_default -> "Seleccionar")
 						</label>
 					</div>
@@ -62,47 +62,53 @@
 							</label>
 						</div>
 					</div>
-			 	  
-					 
-				
-				<div class="col-sm-4">
-					<label for="inputOrgranigrama" class="control-label">Departamento/Servicio</label> 
+
+
+
+				<div class="col-sm-3">
+					<label for="inputOrgranigrama" class="control-label">Departamento/Servicio</label>
 					<div class="input-group">
 						@inputText(formBuscador("organigrama.nombre"),'class -> "form-control",'id -> "organigrama")
 						@inputText(formBuscador("organigrama_id"),'hidden -> "hidden",'id -> "organigrama_id")
 						<span class="input-group-addon">
-		                	<a href="#" id="searchOrganigrama" data-title="Selección de Departamento/Servicio" 
-		                				data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()" 
-		                				data-height="650" data-width="700" 
-		                				data-listen="modal.seleccion.servicio.simple" 
+		                	<a href="#" id="searchOrganigrama" data-title="Selección de Departamento/Servicio"
+		                				data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()"
+		                				data-height="650" data-width="700"
+		                				data-listen="modal.seleccion.servicio.simple"
 		                				data-label="#organigrama" data-field="#organigrama_id" /> <i class="glyphicon glyphicon-search"></i></a>
 		                </span>
 					</div>
 				</div>
-				
-				
-				
-				
+
+				<div class="col-sm-2">
+					<label class="control-label">
+						Activo
+						@select(formBuscador("activo"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
+					</label>
+				</div>
+
+
+
 			</div>
-			<div class="row">	  
+			<div class="row">
 				<div class="col-sm-2">
 				<label class="control-label">Ejercicio
 					@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</label>
-				</div>	
+				</div>
 				<div class="col-sm-2 input-group">
 					<label for="desde" class="control-label">Fecha </label>
 					<div>
-					@inputText(formBuscador("desde"), 
-							  'class -> "form-control inputDateMascara", 
-							  'id -> "desde", 
+					@inputText(formBuscador("desde"),
+							  'class -> "form-control inputDateMascara",
+							  'id -> "desde",
 							  'placeholder -> "Desde")
-					@inputText(formBuscador("hasta"), 
-					 		   'class -> "form-control inputDateMascara", 
-					 		   'id -> "hasta", 
+					@inputText(formBuscador("hasta"),
+					 		   'class -> "form-control inputDateMascara",
+					 		   'id -> "hasta",
 					 		   'placeholder -> "Hasta")
 					</div>
-				</div> 
+				</div>
 			 	<div class="col-sm-2">
 					<div class="form-group">
 						<label for="nombre" class="control-label">Descripcion
@@ -113,23 +119,23 @@
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="" class="control-label">Tipo Licencia</label>
-						@select(formBuscador("tipo_licencia_id"), 
+						@select(formBuscador("tipo_licencia_id"),
 									TipoLicencia.find.all().map { p => p.id.toString -> p.nombre},
-									'class -> "form-control select", 
-									'_default -> "Seleccionar") 
+									'class -> "form-control select",
+									'_default -> "Seleccionar")
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="cuit" class="control-label">Tipo Relacion
-						@select(formBuscador("tipo_relacion_laboral"), 
-						TipoRelacionLaboral.find.all().map { p => p.id.toString -> p.nombre}, 
+						@select(formBuscador("tipo_relacion_laboral"),
+						TipoRelacionLaboral.find.all().map { p => p.id.toString -> p.nombre},
 						'class -> "form-control select", '_default -> "Seleccionar")
 						</label>
 					</div>
 				</div>
-			</div>	
-			<div class="row">			
+			</div>
+			<div class="row">
 				<div class="col-sm-2">
 					<div class="form-group">
 					<label for="nombre" class="control-label">&nbsp;</label>
@@ -142,20 +148,20 @@
 					<a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasEnFecha()"  class="form-control btn btn-default">Limpiar</a>
 					</div>
 				</div>
-				
+
 			</div>
 		</form>
 	</div>
 	@if(lista != null){
 		@if(lista.size() == 0) {
-	        
+
 	        <div class="well">
 	            <em>No se encuentran Agentes</em>
 	        </div>
-	        
+
 	    } else {
-	    	
-			
+
+
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
@@ -189,7 +195,7 @@
 							case "5" => {Contrato Relacion Ministerio Salud}
 							case "6" => {Adscripto Otras Entidades}
 					    	case _ => {}
-							}		
+							}
 						</td>
 						<td>@(utils.DateUtils.formatDate(sql.getDate("finicio")))</td>
 						<td>@(utils.DateUtils.formatDate(sql.getDate("ffin")))</td>
@@ -202,11 +208,11 @@
 									<i class="glyphicon glyphicon-list-alt"></i></div>
 							}
 						</td>
-					</tr>	
-				}		 
+					</tr>
+				}
 				</tbody>
 	        </table>
-			
+
 	    }
     }
 
