--- a/app/views/contabilidad/ordenesPagosCircuitos/acciones/modalPasarContabilidad.scala.html
+++ b/app/views/contabilidad/ordenesPagosCircuitos/acciones/modalPasarContabilidad.scala.html
@@ -1,13 +1,22 @@
 @(formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
-	
-@helper.form(action = controllers.contabilidad.routes.OrdenesPagosCircuitosAccionesController.pasarContabilidadMasivo(), 'id -> "formPasarContabilidadOpc") {	
-	
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
+@helper.form(action = controllers.contabilidad.routes.OrdenesPagosCircuitosAccionesController.pasarContabilidadMasivo(), 'id -> "formPasarContabilidadOpc") {
+
 	@views.html.tags.successError()
-	
-	<div class="col-sm-5"><br />
-		<button type="submit" class="btn btn-default" title="Pasar a Contabilidad"><i class="glyphicon glyphicon-arrow-right"></i> Pasar a Contabilidad</button>
+	<div class="row">
+		<div class="col-sm-9">
+			<div class="form-group">
+				<label for="comentario" class="control-label">Comentario</label>
+				<input name="comentario" id="comentario" class="form-control date"/>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-5"><br />
+			<button type="submit" class="btn btn-default" title="Pasar a Contabilidad"><i class="glyphicon glyphicon-arrow-right"></i> Pasar a Contabilidad</button>
+		</div>
 	</div>
 
 }
