--- a/app/views/rrhh/agente/indexAgente.scala.html
+++ b/app/views/rrhh/agente/indexAgente.scala.html
@@ -5,11 +5,11 @@
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/rrhh/agentes.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @getClassEstado(i:Agente) = @{
 	var classEstado:String = new String()
-	
+
 	if(i.estado != null && i.estado.id == 48){
 		classEstado = "borrador"
 	}else if(i.estado != null && i.estado.id == 47){
@@ -17,7 +17,7 @@
 	}else if(i.estado != null && i.estado.id == 46){
 		classEstado = "autorizado"
 	}
-	
+
 	classEstado
 }
 
@@ -28,7 +28,7 @@
 			<div class="col-sm-7">
 				<h1>Lista de Agentes</h1>
 			</div>
-			 
+
 			<div class="col-sm-5">
 				<div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -38,12 +38,13 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	@if(Permiso.check("reporteDatosAgente")) {
-				  		<li role="presentation"><a data-title="Datos Agentes" role="menuitem" tabindex="-1" data-url="@controllers.rrhh.routes.AgentesReportesController.reportesDatosAgente()" id="modalDatosAgente">Datos Agente</a></li>
-				 		<li role="presentation"><a data-title="Certificaciones Agentes" role="menuitem" tabindex="-1" data-url="@controllers.rrhh.routes.AgentesReportesController.reportesCertificacionesAgente()" id="modalCertificacionesAgente">Certificaciones Agente</a></li>
+				  		<li role="presentation"><a data-title="Datos Agentes"  href="#" role="menuitem" tabindex="-1" data-url="@controllers.rrhh.routes.AgentesReportesController.reportesDatosAgente()" id="modalDatosAgente">Datos Agente</a></li>
+				  		<li role="presentation"><a data-title="Datos RUL Agentes"  href="#" role="menuitem" tabindex="-1" data-url="@controllers.rrhh.routes.AgentesReportesController.reportesDatosRulAgente()" id="modalDatosRulAgente">Datos RUL Agente</a></li>
+				 		<li role="presentation"><a data-title="Certificaciones Agentes"  href="#" role="menuitem" tabindex="-1" data-url="@controllers.rrhh.routes.AgentesReportesController.reportesCertificacionesAgente()" id="modalCertificacionesAgente">Certificaciones Agente</a></li>
 				 	}
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -52,47 +53,47 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	<li role="presentation" class="dropdown-header">Acciones Masivas</li>
-				   
-						
+
+
 					    @if(Permiso.check("agentePasarCargado")) {
-					    	<li role="presentation"><a role="menuitem" id="accionPasarCargado" tabindex="-1" href="#" 
+					    	<li role="presentation"><a role="menuitem" id="accionPasarCargado" tabindex="-1" href="#"
 					    	data-url="@controllers.rrhh.routes.AgentesAccionesController.modalPasarACargado()">Pasar a Cargado</a></li>
 					    }
 					    @if(Permiso.check("agentePasarPreAprobado")) {
-					    	<li role="presentation"><a role="menuitem" id="accionPasarPreaprobado" tabindex="-1" href="#" 
+					    	<li role="presentation"><a role="menuitem" id="accionPasarPreaprobado" tabindex="-1" href="#"
 					    	data-url="@controllers.rrhh.routes.AgentesAccionesController.modalPasarAPreaprobado()">Pasar a Preaprobado</a></li>
 					    }
 					    @if(Permiso.check("agentePasarAprobado")) {
-					    	<li role="presentation"><a role="menuitem" id="accionPasarAprobado" tabindex="-1" href="#" 
+					    	<li role="presentation"><a role="menuitem" id="accionPasarAprobado" tabindex="-1" href="#"
 					    	data-url="@controllers.rrhh.routes.AgentesAccionesController.modalPasarAAprobado()">Pasar a Aprobado</a></li>
 					    }
 					    @if(Permiso.check("agentePasarBorrador")) {
-					    	<li role="presentation"><a role="menuitem" id="accionPasarBorrador" tabindex="-1" href="#" 
+					    	<li role="presentation"><a role="menuitem" id="accionPasarBorrador" tabindex="-1" href="#"
 					    	data-url="@controllers.rrhh.routes.AgentesAccionesController.modalPasarABorrador()">Pasar a Borrador</a></li>
 					    }
 					    @if(Permiso.check("agentePasarCancelado")) {
-					    	<li role="presentation"><a role="menuitem" id="accionPasarCancelado" tabindex="-1" href="#" 
+					    	<li role="presentation"><a role="menuitem" id="accionPasarCancelado" tabindex="-1" href="#"
 					    	data-url="@controllers.rrhh.routes.AgentesAccionesController.modalPasarACancelado()">Pasar a Cancelado</a></li>
 					    }
-					    
+
 				  </ul>
 				</div>
-					
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.rrhh.routes.AgentesController.crearAgente()?@UriTrack.encode()"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo Agente</a>
 				</div>
 			</div>
-			
-			 
+
+
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
-	
+
 	<div id="actions">
-		 
+
 			<form action="" id="formSearchAgentes" method="GET">
-			
+
 				<div class="row" >
 					<div class="col-sm-5 filtrosEstados" id="filtrosEstados">
 						<div class="btn-group">
@@ -140,79 +141,79 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">	  
+				<div class="row">
 					<div class="col-sm-4">
-						<label for="inputOrgranigrama" class="control-label">Departamento/Servicio</label> 
+						<label for="inputOrgranigrama" class="control-label">Departamento/Servicio</label>
 						<div class="input-group">
 							@inputText(formBuscador("organigrama.nombre"),'class -> "form-control",'id -> "organigrama")
 							@inputText(formBuscador("organigrama_id"),'hidden -> "hidden",'id -> "organigrama_id")
 							<span class="input-group-addon">
-			                	<a href="#" id="searchOrganigrama" data-title="Selección de Departamento/Servicio" 
-			                				data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()" 
-			                				data-height="650" data-width="700" 
-			                				data-listen="modal.seleccion.servicio.simple" 
+			                	<a href="#" id="searchOrganigrama" data-title="Selección de Departamento/Servicio"
+			                				data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()"
+			                				data-height="650" data-width="700"
+			                				data-listen="modal.seleccion.servicio.simple"
 			                				data-label="#organigrama" data-field="#organigrama_id" /> <i class="glyphicon glyphicon-search"></i></a>
 			                </span>
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<label for="inputProfesion" class="control-label">Profesion</label> 
+						<label for="inputProfesion" class="control-label">Profesion</label>
 						<div class="input-group">
 							@inputText(formBuscador("profesion.nombre"),'class -> "form-control",'id -> "profesion")
 							@inputText(formBuscador("profesion_id"),'hidden -> "hidden",'id -> "profesion_id")
 							<span class="input-group-addon">
-			                	<a href="#" id="searchProfesion" data-title="Selección de profesion" 
-			                				data-url="@controllers.rrhh.routes.ProfesionesController.modalBuscar()" 
-			                				data-height="650" data-width="700" 
-			                				data-listen="modal.seleccion.profesion.simple" 
+			                	<a href="#" id="searchProfesion" data-title="Selección de profesion"
+			                				data-url="@controllers.rrhh.routes.ProfesionesController.modalBuscar()"
+			                				data-height="650" data-width="700"
+			                				data-listen="modal.seleccion.profesion.simple"
 			                				data-label="#profesion" data-field="#profesion_id" /> <i class="glyphicon glyphicon-search"></i></a>
 			                </span>
 						</div>
 					</div>
-					
-					
-					
-					
+
+
+
+
 						<div class="col-sm-2">
-							<label class="control-label"> 
+							<label class="control-label">
 								Activo
 								@select(formBuscador("activo"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
 							</label>
 						</div>
 						<div class="col-sm-2">
-							<label class="control-label"> 
+							<label class="control-label">
 								Asignaciones Familiares
 								@select(formBuscador("asignacion_familiar"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
 							</label>
 						</div>
-					 
-					
+
+
 				</div>
-					
-				<div class="row" >	
+
+				<div class="row" >
 					<div class="col-sm-2">
 						<div class="form-group">
 							<label for="cuit" class="control-label">Tipo Relacion
-							@select(formBuscador("tipo_relacion_laboral"), 
-							TipoRelacionLaboral.find.all().map { p => p.id.toString -> p.nombre}, 
+							@select(formBuscador("tipo_relacion_laboral"),
+							TipoRelacionLaboral.find.all().map { p => p.id.toString -> p.nombre},
 							'class -> "form-control select", '_default -> "Seleccionar")
 							</label>
 						</div>
 					</div>
 					<div class="col-sm-2">
-						<label class="control-label"> 
+						<label class="control-label">
 							Residente
 							@select(formBuscador("residente"),options(""->"","SI"->"SI","NO"->"NO","basica"->"Basica","posbasica"->"Posbasica"), 'class -> "form-control select")
 						</label>
 					</div>
-					
+
 					<div class="col-sm-2">
 						<div class="checkbox">
-							<label class="control-label"> 
+							<label class="control-label">
 								Con RUL
 								@checkbox(formBuscador("con_rul"))
-							</label> 
-						</div> 
+							</label>
+						</div>
 					</div>
 					<div class="col-sm-2 input-group">
 						<label class="control-label">Fecha Ingreso</label>
@@ -228,40 +229,40 @@
 							@inputText(formBuscador("fcud_hasta"), 'class -> "form-control inputDateMascara", 'id -> "cud_hasta", 'placeholder -> "Hasta")
 						</div>
 					</div>
-				</div>	
-				<div class="row" >	
+				</div>
+				<div class="row" >
 					<div class="col-sm-3">
 					<label class="control-label">Escala</label>
 						<div class="input-group">
 							@inputText(formBuscador("escalaLaboral.nombre"), 'name -> "", 'class -> "form-control", 'id -> "escala_laboral")
 							@inputText(formBuscador("escala_laboral_id"), 'hidden -> "hidden", 'id -> "escala_laboral_id")
 							<span class="input-group-addon">
-							<a href="#" class="searchModal" id="searchEscalaLaboral" 
-									 	data-title="Selección de escala" 
-									 	data-url="@controllers.haberes.routes.EscalasLaboralesController.modalBuscar()" 
-									 	data-height="650" data-width="700" 
-									 	data-listen="modal.seleccion.escalaLaboral.simple" 
+							<a href="#" class="searchModal" id="searchEscalaLaboral"
+									 	data-title="Selección de escala"
+									 	data-url="@controllers.haberes.routes.EscalasLaboralesController.modalBuscar()"
+									 	data-height="650" data-width="700"
+									 	data-listen="modal.seleccion.escalaLaboral.simple"
 									 	data-label="#escala_laboral" data-field="#escala_laboral_id">
 							<i class="glyphicon glyphicon-search"></i></a></span>
 						</div>
-					</div>	
+					</div>
 					<div class="col-sm-3">
-						
-							<label for="inputEspecialidad" class="control-label">Especialidad</label> 
+
+							<label for="inputEspecialidad" class="control-label">Especialidad</label>
 							<div class="input-group">
 								@inputText(formBuscador("especialidad.nombre"),'class -> "form-control",'id -> "especialidad")
 								@inputText(formBuscador("especialidad_id"),'hidden -> "hidden",'id -> "especialidad_id")
 								<span class="input-group-addon">
-								<a href="#" class="searchModal" id="searchEspecialidad" 
-										 	data-title="Selección de Especialidad" 
-										 	data-url="@controllers.rrhh.routes.EspecialidadesController.modalBuscar()" 
-										 	data-height="650" data-width="700" 
-										 	data-listen="modal.seleccion.especialidad.simple" 
+								<a href="#" class="searchModal" id="searchEspecialidad"
+										 	data-title="Selección de Especialidad"
+										 	data-url="@controllers.rrhh.routes.EspecialidadesController.modalBuscar()"
+										 	data-height="650" data-width="700"
+										 	data-listen="modal.seleccion.especialidad.simple"
 										 	data-label="#especialidad" data-field="#especialidad_id">
-								<i class="glyphicon glyphicon-search"></i></a></span> 
+								<i class="glyphicon glyphicon-search"></i></a></span>
 							</div>
 					</div>
-					
+
 					<div class="col-sm-2">
 						<div class="form-group">
 						<label for="nombre" class="control-label">&nbsp;</label>
@@ -274,22 +275,22 @@
 						<a href="@controllers.rrhh.routes.AgentesController.indexAgente()"  class="form-control btn btn-default">Limpiar</a>
 						</div>
 					</div>
-					
-				</div>	
+
+				</div>
 			</form>
 	</div>
-	
-	
+
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Agentes</em>
         </div>
-        
+
     } else {
-		
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-		
+
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 		<table  id="listaDeAgente" class="table table-striped table-bordered">
 			<thead>
 				<tr>
@@ -304,7 +305,7 @@
 					<th>Puesto</th>
 					<th>Relacion</th>
 					<th width="30">Activo</th>
-					
+
 					<th width="30">Estado</th>
 					<th class="50">#</th>
 				</tr>
@@ -337,8 +338,8 @@
 						case "8" => {Planta Temporaria - Otras Entidades}
 						case "9" => {Otro}
 				    	case _ => {}
-						}	
-						
+						}
+
 					</td>
 					<td>@if(agente.activo != null){@if(agente.activo) {Si} else {No}} else{falta cargar}</td>
 					<td class="estado">@(agente.estado.nombre)</td>
@@ -351,13 +352,12 @@
              }
 	        </tbody>
         </table>
-		
+
 		<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.rrhh.routes.AgentesController.indexAgente())
 		</div>
  	 }
 }
-		
-		
-	
-	
+
+
+
